# cmdmock

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  publish.yml  release.yml
cmdmock/: __init__.py
