[tool.poetry]
name = "cmdmock"
version = "1.3.2"
description = "cmdmock CLI tool"
authors = ["Pierre Smeyers <pierre.smeyers@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cmdmock"}]
homepage = "https://gitlab.com/pismy/cmdmock"
keywords = ['command', 'mock']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.scripts]
cmdmock = "cmdmock:main"

[tool.poetry.group.dev.dependencies]
# new development dependencies can be added with 'poetry add -D yyy'
ruff = "^0.8.0"

[tool.ruff.lint]
extend-select = ["I"] # isort
ignore = ["F841"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
